<?xml version="1.0"?>
<package format="3">
  <name>offboard_control</name>
  <version>0.0.1</version>
  <description>Offboard control node for PX4</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>px4_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>ament_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>